# edgehog-device-forwarder-proto

./: .gitignore  Makefile  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml  codegen-check.yaml  commit-codegen.yaml  elixir-check.yaml  reuse-lint.yaml  rust-check.yaml  rust-codegen.yaml
.github/workflows/rust/: check.yaml
.github/workflows/scripts/: commit.sh
.reuse/: dep5
elixir/edgehog_device_forwarder_proto/: .formatter.exs  .gitignore  README.md  mix.exs  mix.lock.license
elixir/edgehog_device_forwarder_proto/lib/: edgehog_device_forwarder_proto.ex
elixir/edgehog_device_forwarder_proto/lib/edgehog_device_forwarder_proto/edgehog/device/forwarder/: http.pb.ex  message.pb.ex  ws.pb.ex
elixir/edgehog_device_forwarder_proto/test/: edgehog_device_forwarder_proto_test.exs
proto/edgehog/device/forwarder/: http.proto  message.proto  ws.proto
rust/: .gitignore  Cargo.toml
rust/edgehog-device-forwarder-proto/: Cargo.toml
rust/edgehog-device-forwarder-proto/src/: lib.rs  proto.rs
rust/rust-codegen/: Cargo.toml
rust/rust-codegen/src/: main.rs
scripts/: check-diff.sh  check_diff.sh  codegen.sh  elixir_deps_check.sh  protoc_check.sh
