# This file is part of Edgehog.
#
# Copyright 2023 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "rust-codegen",
    "edgehog-device-forwarder-proto"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.72.0"

[workspace.dependencies]
clap = "4.4.6"
color-eyre = "0.6.2"
prost = "0.12.0"
prost-build = "0.12.0"
