# Copyright 2023 SECO Mind Srl
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-forwarder-proto"
version = "0.1.0"
categories = ["encoding"]
description = "Protobuf messages for the Edgehog Device Forwarder"
documentation = "https://docs.rs/edgehog-device-forwarder-proto"
edition = { workspace = true }
keywords = ["protobuf", "iot", "edgehog"]
license = { workspace = true }
readme = "../../README.md"
repository = "https://github.com/edgehog-device-manager/edgehog-device-forwarder-proto"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
