# Copyright 2023 SECO Mind Srl
# SPDX-License-Identifier: Apache-2.0

[package]
name = "rust-codegen"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
prost-build = { workspace = true }
